express/styles/styles.css
/* ... */
@media (min-width:900px) {
  main .section>div {
    max-width: 830px;
  }
}

@media (min-width:1200px) {
  main .section>div {
    max-width: 1024px;
  }
}


/* jank protection for async blocks/sections */
main .pricing,
main .hero-animation {
  opacity: 0;
  height: 100vh;
  transition: opacity 100ms;
}

main .block[data-block-status='loading'],
main .block[data-block-status='initialized'] {
  visibility: hidden;
}

/* free plan widget */
main .block .button-container.free-plan-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
}

main .block.center .button-container.free-plan-container {
  justify-content: center;
}

main .block.center .free-plan-widget-placeholder,
main .block.fullscreen-marquee .free-plan-widget-placeholder {
  margin: auto;
}

main .block .button-container.free-plan-container.fixed {
  position: fixed;
  top: -8px;
  margin-top: 16px;
  z-index: 10;
}

main .block .button-container.free-plan-container a.button {
  max-height: 24px;
}

main .block .free-plan-widget {
  position: relative;
  box-sizing: border-box;
  background-color: var(--color-gray-100);
  border-radius: 20px;
  margin: 32px 0;
  padding: 16px 24px;
  width: fit-content;
  display: flex;
  flex-direction: column;
  font-size: var(--body-font-size-m);
  font-weight: 400;
  white-space: nowrap;
}

main .block .free-plan-widget .learn-more-button {
  position: absolute;
  display: flex;
  align-items: center;
  bottom: -32px;
  left: 50%;
  transform: translateX(-50%);
}

main .block.center .free-plan-widget {
  margin: 32px auto;
}

main .free-plan-widget .plan-widget-tag {
  display: flex;
  align-items: center;
}

main .free-plan-widget .plan-widget-tag img.icon.icon-checkmark {
  background-color: #33AB84;
  display: block;
  border-radius: 50%;
  height: 8px;
  width: 8px;
  padding: 3px;
  margin-right: 4px;
}

/* floating-cta main CTA suppression */
body[data-device="mobile"] main .floating-button-wrapper[data-audience="mobile"][data-section-status="loaded"] .same-fcta {
  display: block;
}

main > div:not(.banner-container) .block:not(.pricing-summary, .pricing-cards, .pricing-table, .puf, .split-action, .link-list, .wayfinder, .ratings) a.button.same-fcta {
  display: none;
}

main .long-form.grid-width-6-desktop.narrow .default-content-wrapper {
  max-width: 850px;
  margin: 0 auto; 
} 


@media (min-width: 900px) {
  main .block .button-container.free-plan-container {
    width: max-content;
  }

  main .block.fullscreen-marquee .button-container.free-plan-container {
    justify-content: center;
    width: auto;
    align-items: center;
  }

  main .block .button-container.free-plan-container a.button {
    margin: 0;
    display: flex;
    align-items: center;
    /* todo: investigate why */
    z-index: 4;
  }

  main .block .free-plan-widget .plan-widget-tag {
    text-align: left;
  }

  main > div:not(.banner-container) .block:not(.pricing-summary, .pricing-cards, .pricing-table, .puf, .link-list, .wayfinder, .ratings) a.button.same-fcta {
    display: inline-block;
  }
}

@media (min-width: 1200px) {
  main .block .button-container.free-plan-container {
    flex-direction: row;
    width: auto;
    justify-content: left;
  }

  main .block.center .button-container.free-plan-container {
    justify-content: unset;
    margin: 40px auto 0 auto;
  }

  main .block .free-plan-widget {
    margin: 0 auto;
  }

  main .block .button-container.free-plan-container a.button {
    margin-right: 24px;
  }

  main .block .button-container.free-plan-container .free-plan-widget {
    margin: 0;
  }

  main .block .button-container.free-plan-container.stacked {
    margin-top: 0;
    flex-wrap: wrap;
  }

  main .block .button-container.free-plan-container.stacked .free-plan-widget {
    margin-top: 24px;
    flex-direction: row;
  }

  main .block .button-container.free-plan-container.stacked .free-plan-widget > div {
    margin-right: 16px;
  }

  main .template-list-fourcols-container>div,
  main .template-list-horizontal-container>div {
    max-width: 1200px;
  }

  main .columns-fullsize-container>div,
  main .columns-fullsize-center-container>div,
  main .template-list-sixcols-container>div {
    max-width: 1122px;
  }

  main .block .free-plan-bullet .free-plan-bullet-container,
  main .block .free-plan-widget-placeholder {
    max-width: 400px;
  }
}

main .template-list-sixcols-container>div {
  padding: 0;
}

@-webkit-keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

@-moz-keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

@keyframes freePlanHighlight {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-25%);
  }
}

/* disable budoux on small screens  */
@media (max-width: 600px) {
  h1.budoux,
  h2.budoux,
  h3.budoux,
  h4.budoux,
  h5.budoux {
    word-break: normal !important;
  }
}

/* Store icons */
img.icon-apple-store,
img.icon-google-store,
img.icon-galaxy-store,
img.icon-microsoft-store {
  height: 70px;
  width: auto;
  margin: 8px;
}

/* Lottie player default */
.lottie {
  width: 32px;
  height: 32px;
}

/* hide promotion block until loaded */
main .promotion {
  display: none;
}

/* hide floating button before css loads */
main .floating-button-wrapper,
main .floating-button {
  position: fixed;
  display: none;
}

/* hide the .section that ONLY has the floating-button block */
/* (removes the extra whitespace from padding) */
[class=".section floating-button-container"] {
  display: none;
}

/* Japanese heading balanced word wrap styles */
wbr.wbr-off {
  display: none;
}

/* progressive section appearance */
main .section[data-section-status='loading'],
main .section[data-section-status='initialized'],
main > div,
main .section[data-status='decorated'] {
  display: none;
}
/* ... */

